@@ -1,0 +1,2 @@
+class Task < ActiveRecord::Base
+end
