@@ -1,5 +1,5 @@
 .title_menu Not implemented yet.
-.title Home
+.title Dashboard
 /
   Check out HTML source to view the ouput of the hook:
   = hook(:home_view, self, :hello => "world!", :welcome => "home")
