@@ -1,4 +1,2 @@
+.title_menu Not implemented yet.
 .title Preferences
-%br
-Not implemented yet.
-%br
