@@ -1,0 +1,11 @@
+.title_menu Not implemented yet.
+.title Tasks
+
+/ <% for task in @tasks %>
+/   <tr>
+/     <td><%= link_to 'Show', task %></td>
+/     <td><%= link_to 'Edit', edit_task_path(task) %></td>
+/     <td><%= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete %></td>
+/   </tr>
+/ <% end %>
+/ <%= link_to 'New task', new_task_path %>
